<resources>
    <string name="app_name">Relay</string>

    <!-- bottom navigation -->
    <string name="menu_mypage">마이페이지</string>
    <string name="menu_running">러닝</string>
    <string name="menu_group">그룹</string>
    <string name="menu_timetable">시간표</string>

    <!-- timetable -->
    <string name="add">추가하기</string>
    <string name="delete">삭제하기</string>
    <string name="timetable_team">팀 시간표</string>
    <string name="goal">목표</string>
    <string name="save">저장</string>

    <!-- settings -->
    <string name="cancel">취소</string>
    <string name="edit">변경</string>
    <string name="change_pw">비밀번호 변경하기</string>
    <string name="setting_alarm">알림 허용</string>
    <string name="logout">로그아웃</string>
    <string name="withdrawal">탈퇴하기</string>

    <!-- login & signUp & person info & Authentication-->
    <string name="login_app_name">런닝MENS</string>
    <string name="kakao_app_key">13aaf4215477f1593247ca3f66a3fcc7</string>
    <string name="next">다음</string>
    <string name="back">뒤로</string>
    <string name="agree">동의</string>
    <string name="check">확인</string>
    <string name="login">로그인</string>
    <string name="sns_login">다음으로 로그인하기</string>
    <string name="signup">회원가입</string>
    <string name="signup_unbar"><u>회원가입</u></string>
    <string name="id_phone_email">전화번호 / 이메일</string>
    <string name="pw">비밀번호</string>
    <string name="check_pw">비밀번호 확인</string>
    <string name="new_pw1">새로운 비밀번호</string>
    <string name="new_pw2">새 비밀번호</string>
    <string name="forget_pw">비밀번호를 잊으셨나요?</string>
    <string name="least_pw_length_en">At least 8 digits</string>
    <string name="name">이름</string>
    <string name="email">이메일</string>
    <string name="phone_number">전화번호</string>
    <string name="send_auth">인증 번호 보내기</string>
    <string name="auth_num">인증 번호</string>
    <string name="wrong_auth_num">인증번호가 일치하지 않습니다.</string>
    <string name="person_info">개인정보 이용처리</string>
    <string name="info_text">1. 입력받는 정보\n
    \t가.정보항목\n
        \t\t개인 프로필 : 성명, 이메일, 전화번호\n
    \t나.입력방법\n
        \t\t- 회원가입 페이지에서 이용자가 직접 입력\n
        \t\t- SNS 제공 정보\n\n

2. 개인정보의 이용목적과 수집 및 제공 정보\n
    \t가.이용 목적\n
        \t\t서비스(회원가입 등)이용을 위한 본인인증\n
        \t\t부정 이용 방지 및 수사의뢰\n
        \t\t기타 법률에서 정한 목적\n
    \t나.수집 및 제공하는 정보\n
        \t\t성명, 이메일, 전화번호\n
        \t\tIP 주소 [제공사 : 서비스 회원사]\n\n

3. 개인정보의 보유 및 이용기간\n
    \t이용자의 개인정보는 원칙적으로 개인정보의 수집 및 이용목적이 달성되면 지체없이 파기합니다.\n
    \t단, 다음의 정보에 대해서는 아래의 이유로 명기한 기간 동안 보유합니다.\n\n

    \t가.회사 내부 방침에 의한 정보보유 사유\n
        \t\t본인확인 발생 및 차단기록, 주민등록번호\n
        \t\t보유 이유: 부정 이용 방지 및 민원 처리\n
        \t\t보유 기간: 5년\n
    \t나.관계법령에 의한 정보보유 사유\n
        \t\t이용자 불만 또는 분쟁 처리에 관한 기록\n
        \t\t보유 이유: 전자상거래 등에서의 소비자보호에 관한 법률\n
        \t\t보유 기간: 3년\n</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="saturday"><font color="#1877F2">토</font></string>
    <string name="sunday"><font color="#FF0000">일</font></string>
    <array name="weekdays_custom">
        <item>@string/sunday</item>
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>@string/saturday</item>
    </array>
</resources>