<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.view.ForgetPwActivity">

    <TextView
        android:id="@+id/tv_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/forget_pw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_phone_email"
        android:layout_marginBottom="35dp"/>

    <EditText
        android:id="@+id/et_phone_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/id_phone_email"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.85"
        android:background="@drawable/text_gray_inside_shadow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingHorizontal="15dp"/>

    <android.widget.Button
        android:id="@+id/btn_send"
        android:layout_width="0dp"
        android:layout_height="45dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.85"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/send_auth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_phone_email"
        android:background="@drawable/btn_orange2"
        style="?android:attr/borderlessButtonStyle"
        android:layout_marginVertical="35dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>