<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login.SignupActivity"
    android:background="@color/background_login">

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="26sp"
        android:text="@string/signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_upload_img"
        android:layout_marginTop="20dp"/>

    <ImageButton
        android:id="@+id/btn_upload_img"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:background="@drawable/circle"
        android:src="@drawable/ic_camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_signup"
        app:layout_constraintBottom_toTopOf="@id/et_name"/>


    <EditText
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:layout_height="46dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.9"
        android:background="@drawable/et_login"
        android:textColor="@color/text_dark_gray"
        android:textSize="16sp"
        android:hint="@string/name"
        android:inputType="text"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.3"
        android:layout_marginVertical="10dp"
        android:paddingHorizontal="15dp"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="46dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.9"
        android:background="@drawable/et_login"
        android:textColor="@color/text_dark_gray"
        android:textSize="16sp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        android:layout_marginVertical="10dp"
        android:paddingHorizontal="15dp"/>

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="0dp"
        android:layout_height="46dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.9"
        android:background="@drawable/et_login"
        android:textColor="@color/text_dark_gray"
        android:textSize="16sp"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        android:layout_marginVertical="10dp"
        android:paddingHorizontal="15dp"/>

    <EditText
        android:id="@+id/et_pw"
        android:layout_width="0dp"
        android:layout_height="46dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.9"
        android:background="@drawable/et_login"
        android:textColor="@color/text_dark_gray"
        android:textSize="16sp"
        android:hint="@string/pw"
        android:inputType="textPassword"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_phone"
        android:layout_marginVertical="10dp"
        android:paddingHorizontal="15dp"/>

    <EditText
        android:id="@+id/et_check_pw"
        android:layout_width="0dp"
        android:layout_height="46dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.9"
        android:background="@drawable/et_login"
        android:textColor="@color/text_dark_gray"
        android:textSize="16sp"
        android:hint="@string/check_pw"
        android:inputType="textPassword"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_pw"
        android:layout_marginVertical="10dp"
        android:paddingHorizontal="15dp"/>

    <android.widget.Button
        android:id="@+id/btn_next"
        android:layout_width="0dp"
        android:layout_height="45dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.9"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:text="@string/next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_check_pw"
        android:background="@drawable/btn_orange1"
        style="?android:attr/borderlessButtonStyle"
        android:layout_marginVertical="28dp"/>

    <TextView
        android:id="@+id/tv_sns_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/sns_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_next"
        app:layout_constraintBottom_toTopOf="@id/btn_sns_naver"
        android:layout_marginTop="5dp"/>

    <ImageButton
        android:id="@+id/btn_sns_google"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/btn_google"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toTopOf="@id/btn_sns_naver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_sns_naver"/>

    <ImageButton
        android:id="@+id/btn_sns_naver"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/btn_naver"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@id/tv_sns_signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_sns_google"
        app:layout_constraintEnd_toStartOf="@id/btn_sns_kakao"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="25dp"/>

    <ImageButton
        android:id="@+id/btn_sns_kakao"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/btn_kakao"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toTopOf="@id/btn_sns_naver"
        app:layout_constraintStart_toEndOf="@id/btn_sns_naver"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>