<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mypage.MySettingsActivity">

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/cancel"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginVertical="15dp"
        android:layout_marginHorizontal="5dp"
        android:paddingVertical="5dp"
        style="?android:attr/borderlessButtonStyle"/>

    <FrameLayout
        android:id="@+id/layout_profileImg"
        android:layout_width="140dp"
        android:layout_height="140dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back"
        android:layout_marginTop="25dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_user"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_mypage"
            app:civ_border_width="2dp"
            app:civ_border_color="#000000"/>

        <ImageButton
            android:id="@+id/btn_edit_img"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/circle"
            android:src="@drawable/ic_edit"
            android:elevation="13dp"
            android:layout_gravity="right|bottom"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="13dp"/>
    </FrameLayout>

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="NAME"
        app:layout_constraintTop_toBottomOf="@id/layout_profileImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.4"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tv_user_name"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/text_gray"
            android:text="goodGood0115@naver.com"
            android:gravity="center_vertical"
            android:background="@drawable/rectangle_bottom_gray_border"
            android:paddingHorizontal="8dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle_bottom_gray_border">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.7"
                android:textSize="15sp"
                android:text="자신을 소개하는 문장을 적어보아요."
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:paddingHorizontal="8dp"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:text="@string/edit"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.25"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:backgroundTint="@color/white"
                style="?android:attr/borderlessButtonStyle"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <android.widget.Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/change_pw"
            android:gravity="center_vertical"
            android:background="@drawable/rectangle_bottom_gray_border"
            style="?android:attr/borderlessButtonStyle"
            android:paddingHorizontal="8dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle_bottom_gray_border">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.5"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/setting_alarm"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:paddingHorizontal="8dp"/>

            <Switch
                android:layout_width="0dp"
                android:layout_height="60dp"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:backgroundTint="@color/white"
                android:thumb="@drawable/switch_thumb"
                android:track="@drawable/switch_track_selector" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <android.widget.Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/main_color_text"
            android:text="@string/withdrawal"
            android:gravity="center_vertical"
            style="?android:attr/borderlessButtonStyle"
            android:paddingHorizontal="8dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>